@@ -25,7 +25,6 @@ import java.io.Writer;
 import org.treetank.api.IAxis;
 import org.treetank.api.IReadTransaction;
 import org.treetank.utils.FastStack;
-import org.treetank.utils.TypedValue;
 import org.xml.sax.ContentHandler;
 import org.xml.sax.helpers.AttributesImpl;
 
@@ -110,8 +109,8 @@ public final class SAXGenerator implements Runnable {
       attributes.addAttribute(rtx.getAttributeURI(index), rtx
           .getAttributeLocalPart(index), qName(
           rtx.getAttributePrefix(index),
-          rtx.getAttributeLocalPart(index)), "", TypedValue.atomize(rtx
-          .getAttributeValueType(index), rtx.getAttributeValue(index)));
+          rtx.getAttributeLocalPart(index)), "", rtx
+          .getAttributeValueAsAtom(index));
     }
 
     return attributes;
